2012-09-15  Charlie Zender  <zender@uci.edu>

	* Hand-tagged and released as crm-2.1.7 (crm-20120917) using these commands:
	cd ~/crm;svn commit -m "Preparing crm-2.1.7 release"
	cd;tar cvzf ~/crm.tar.gz --exclude='.#*' --exclude='*~' --exclude='*.MOD' --exclude='TAGS' --exclude='*.o' --exclude='*.d' --exclude='*.mod' --exclude='.cvsignore' --exclude='.svn' ./crm;cd -
	scp ~/crm.tar.gz dust.ess.uci.edu:/var/www/html/crm
	ssh dust.ess.uci.edu "ln -s /var/www/html/crm/crm.tar.gz /var/www/html/crm/crm-2.1.7-ccm-3.6.tar.gz"
	scp ~/crm/doc/index.shtml ~/crm/doc/FAQ ~/crm/doc/README ~/crm/doc/INSTALL ~/crm/doc/LICENSE ~/crm/doc/LICENSE.ccm3 ~/crm/doc/LICENSE.crm ~/crm/doc/ChangeLog ~/crm/doc/VERSION dust.ess.uci.edu:/var/www/html/crm
	svn copy svn+ssh://zender@dust.ess.uci.edu/home/zender/svn/trunk/crm svn+ssh://zender@dust.ess.uci.edu/home/zender/svn/tags/crm/2.1.7 -m "Tagging CRM release 2.1.7."

	* Remove -lhdf5_hl and -lhdf5 to align with new netCDF library structure

2012-09-14  Charlie Zender  <zender@uci.edu>

	* Clarify licenses: CCM3 license for all CCM3 files is in LICENSE.ccm3
	CC BY-NC-SA 3.0 license for all CRM-specific files is in LICENSE.crm
	LICENSE itself now describes the difference

2010-08-09  Charlie Zender  <zender@uci.edu>

	* Default to NETCDFF=Y and link to libnetcdff.a by default

2010-07-08  Charlie Zender  <zender@uci.edu>

	* Deprecate -mp for ifort

2010-07-07  Charlie Zender  <zender@uci.edu>

	* Hand-tagged and released as crm-2.1.6 (crm-20100707) using these commands:
	cd ~/crm;svn commit -m "Preparing crm-2.1.6 release"
	cd;tar cvzf ~/crm.tar.gz --exclude='.#*' --exclude='*~' --exclude='*.MOD' --exclude='TAGS' --exclude='*.o' --exclude='*.d' --exclude='*.mod' --exclude='.cvsignore' --exclude='.svn' ./crm;cd -
	scp ~/crm.tar.gz dust.ess.uci.edu:/var/www/html/crm
	ssh dust.ess.uci.edu "ln -s /var/www/html/crm/crm.tar.gz /var/www/html/crm/crm-2.1.6-ccm-3.6.tar.gz"