@@ -4,7 +4,7 @@
 # Allow for precedence of user-modified files, different search paths
 # This Makefile requires GNU make, AT&T Berkeley-style make will not parse it
 
-# Copyright (C) 1994--2014 Charlie Zender
+# Copyright (C) 1994--2015 Charlie Zender
 # You may copy, distribute, and/or modify this software under the terms of the GNU General Public License (GPL) Version 3
 # See http://www.gnu.org/copyleft/gpl.html for full license text
 
@@ -121,6 +121,9 @@ ifneq (${null},$(findstring CRAY,${PVM_ARCH}))
  CCM_TRG_FLG := CRAY
 endif
 ifneq (${null},$(findstring LINUX,${PVM_ARCH}))
+ CCM_TRG_FLG := SUN
+endif
+ifneq (${null},$(findstring MACOSX,${PVM_ARCH}))
  CCM_TRG_FLG := SUN
 endif
 ifneq (${null},$(findstring SGI,${PVM_ARCH}))
@@ -583,7 +586,8 @@ endif
 endif # end G95 Compiler
 # GNU Fortran Compiler (called as gfortran-mp-4.9 on MACOSX)
 ifneq (${null},$(findstring gfortran,${FC}))
- FFLAGS := -ffixed-line-length-132 -Wall
+# 20150122 -fcray-pointer needed for CRM use of pointer keyword in getmem.F
+ FFLAGS := -ffixed-line-length-132 -Wall -fcray-pointer
 ifeq (${OMP},Y)
  OMP_FLG_C := -fopenmp
  OMP_FLG_F := -fopenmp
